--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Krish Shah. I am a student at The University of Texas at Austin pursing a degree in Computer Science!</p>
+            <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a degree in Computer Science!</p>
             <p>With a blended background in Software Engineering, UI/UX design, and Visual Arts, I hope to delve into the field of Human-Computer Interaction.</p>
           </div>
         </div>
@@ -168,10 +168,12 @@
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/Hebron Sites.png" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Chrome Extension Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
+                    <a href="https://chrome.google.com/webstore/detail/hebron-sites/nifkhcegnmgnibbjkghmlmdhjdcpoejl" target="_blank">
+                      <figcaption>
+                        <div class="h4">Chrome Extension Project</div>
+                        <p>Web Development</p>
+                      </figcaption>
+                    </a>
                   </figure></a></div>
               <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
@@ -347,7 +349,7 @@
           <div class="card-body">
             <div class="h5">Bachelor's of Science: Computer Science</div>
             <p class="category">The University of Texas at Austin</p>
-            <p>Pursing a degree in Computer Science in a top 10 ranked undergraduate Computer Science department in the United States.</p>
+            <p>Incoming Freshmen at UT Austin taking CS 314 (Data Structures and Algorithms), CS 311 (Discrete Math), and M408D (Multivariable Calculus) during my first semester.</p>
           </div>
         </div>
       </div>
@@ -459,8 +461,6 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">214-425-0276</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>krishshah765@utexas.edu</p>
                   </div>
