--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/Longhorn.jpg" alt="Image"/></a></div>
           <div class="h2 title">Krish Shah</div>
-          <p class="category text-white">Computer Science student at UT Austin</p>
+          <p class="category text-white">Computer Science and Economics student at UT Austin</p>
         </div>
       </div>
       <div class="section">
@@ -77,7 +77,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a degree in Computer Science!</p>
+            <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a dual-degree in Computer Science and Economics!</p>
             <p>With a blended background in Software Engineering, UI/UX design, and Visual Arts, I hope to delve into the field of Human-Computer Interaction.</p>
           </div>
         </div>
@@ -292,25 +292,29 @@
   </div>
 </div>
 <div class="section" id="experience">
-  <!-- <div class="container cc-experience">
+  <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>March 2016 - Present</p>
-            <div class="h5">CreativeM</div>
+            <p>September 2023 - December 2023</p>
+            <div class="h5">QWell</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Front End Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">UI/UX Designer and App Developer</div>
+            <p>Qwell is an organization centered around accessibility to resources, events, and community for LGTBTQ+ population in the greater Austin area. 
+
+              In Qwell 1.0, I was tasked with creating the UI/UX and helping implement the explore page for the Qwell app.
+              
+              In Qwell 2.0, I was tasked with building an internal tool that allows admin/app managers to manage the app’s data and information while also letting business owners edit the details or information for their business to be reflected on the app.</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="card">
+    <!-- <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
@@ -325,8 +329,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="card">
+    </div> -->
+    <!-- <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
@@ -341,7 +345,7 @@
           </div>
         </div>
       </div>
-    </div>-->
+    </div> -->
   </div>
 </div>
 <div class="section">
@@ -359,7 +363,25 @@
           <div class="card-body">
             <div class="h5">Bachelor's of Science: Computer Science</div>
             <p class="category">The University of Texas at Austin</p>
-            <p>Incoming Freshmen at UT Austin taking CS 314 (Data Structures and Algorithms), CS 311 (Discrete Math), and M408D (Multivariable Calculus) during my first semester.</p>
+            <p>Relevant Courses: C S 429 (Computer Architecture), SDS 321 (Probability and Statistics), C S 314 (Data Structures and Algorithms), 
+              C S 311 (Discrete Math), M 408D (Multivariable Calculus).</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2023 - 2027</p>
+            <div class="h5">Bachelor's Degree</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Bachelor's of Science: Economics</div>
+            <p class="category">The University of Texas at Austin</p>
+            <p>Relevant Courses: ECO 329 (Economic Statistics), ECO 304K (Microeconomics), ECO 304L (Macroeconomics).</p>
           </div>
         </div>
       </div>
