--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">C</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
               </div>
@@ -126,16 +126,16 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Swift App Development</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div><span class="progress-value">30%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Web Development</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
           </div>
@@ -298,38 +298,40 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
+            <p>January 2024 - Present</p>
+            <div class="h5">SUITS</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Full Stack Engineering Consultant</div>
+            <p>Suits is an app concentrating lawsuit settlements on one platform to help users claim compensation. </p>
+
+            <p>Implementing a receipt scanning and email parsing feature to help automate uploading receipts into the app.</p>
+              
+            <p>Developing a complete redesign implementation on the front end using Swift and Dart.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
             <p>September 2023 - December 2023</p>
             <div class="h5">QWell</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">UI/UX Designer and App Developer</div>
-            <p>Qwell is an organization centered around accessibility to resources, events, and community for LGTBTQ+ population in the greater Austin area. 
-
-              In Qwell 1.0, I was tasked with creating the UI/UX and helping implement the explore page for the Qwell app.
-              
-              In Qwell 2.0, I was tasked with building an internal tool that allows admin/app managers to manage the app’s data and information while also letting business owners edit the details or information for their business to be reflected on the app.</p>
+            <div class="h5">UI/UX Designing Consultant</div>
+            <p>Qwell is an organization centered around accessibility to resources, events, and community for LGTBTQ+ population in the greater Austin area.</p>
+            <p>Created the UI/UX for the explore page for Greater (an app created for QWell).</p>
+            <p>Built an internal tool that allows admin/app managers to manage the app’s data and information while also letting business owners edit the details or information for their business to be reflected on the app.</p>
           </div>
         </div>
       </div>
     </div>
-    <!-- <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>April 2014 - March 2016</p>
-            <div class="h5">WebNote</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Web Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <!-- <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -363,8 +365,9 @@
           <div class="card-body">
             <div class="h5">Bachelor's of Science: Computer Science</div>
             <p class="category">The University of Texas at Austin</p>
-            <p>Relevant Courses: C S 429 (Computer Architecture), SDS 321 (Probability and Statistics), C S 314 (Data Structures and Algorithms), 
+            <p>Relevant Courses: C S 429 (Computer Organization & Architecture), SDS 321 (Probability & Statistics), M 340L (Linear Algebra), C S 314 (Data Structures), 
               C S 311 (Discrete Math), M 408D (Multivariable Calculus).</p>
+            <p>GPA: 4.00</p>
           </div>
         </div>
       </div>
@@ -382,6 +385,7 @@
             <div class="h5">Bachelor's of Science: Economics</div>
             <p class="category">The University of Texas at Austin</p>
             <p>Relevant Courses: ECO 329 (Economic Statistics), ECO 304K (Microeconomics), ECO 304L (Macroeconomics).</p>
+            <p>GPA: 4.00</p>
           </div>
         </div>
       </div>
