--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a dual-degree in Computer Science and Economics!</p>
-            <p>With a blended background in Software Engineering, UI/UX design, and Visual Arts, I hope to delve into the field of Human-Computer Interaction.</p>
+            <p>With a blended background in Programming and UI/UX design, I hope to delve into the field of Software Engineering.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -86,7 +86,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">18</div>
+              <div class="col-sm-8">19</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -126,21 +126,21 @@
         </div>
         <div class="row">
           <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">React.js + TypeScript</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Swift App Development</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">30%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Web Development</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">UI/UX Design</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Figma UI/UX Design</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -250,44 +250,6 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="Photography" role="tabpanel">
-        <div class="ml-auto mr-auto">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-1.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-3.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Wedding Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure></a></div>
-            </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-2.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Beach Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-4.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Nature Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure></a></div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
@@ -298,18 +260,40 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>January 2024 - Present</p>
+            <p>June 2024 - August 2024</p>
+            <div class="h5">AlphaScenario</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Full Stack Engineering Intern</div>
+            <p>Creating an all-new front end user interface from scratch using Figma for designing and React/JavaScript for implementation.</p>
+
+            <p>Leveraging graph theory to create a self-adaptable learning module changing question difficulty based on user track record.</p>
+              
+            <p>Utilizing MongoDB to store “scenarios” and user profiles into the database and React to query the database when required.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>January 2024 - May 2024</p>
             <div class="h5">SUITS</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Full Stack Engineering Consultant</div>
-            <p>Suits is an app concentrating lawsuit settlements on one platform to help users claim compensation. </p>
+            <p>Implemented a redesign of the frontend using React and TypeScript; changes led to a $25,000 stipend from “Longhorn Startup.” </p>
 
-            <p>Implementing a receipt scanning and email parsing feature to help automate uploading receipts into the app.</p>
+            <p>Created Python scripts leveraging the government’s product recall API and storing necessary data in a Firebase database.</p>
               
-            <p>Developing a complete redesign implementation on the front end using Swift and Dart.</p>
+            <p>Automated Python scripts deleting old data and adding new data monthly, parsing the data and sorting it into the database.</p>
+
+            <p>Front end and back end improvements increased user traction 100% (from ~500 users to ~1,000 users) in 2 months.</p>
           </div>
         </div>
       </div>
