--- a/index.html
+++ b/index.html
@@ -260,18 +260,38 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
+            <p>August 2024 - Present</p>
+            <div class="h5">Texas Convergent</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Technical Lead</div>
+            <p>Leading a team of ~6-8 software engineers in a Fall Semester Co-op with a startup based in Austin, Texas.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
             <p>June 2024 - August 2024</p>
             <div class="h5">AlphaScenario</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Full Stack Engineering Intern</div>
-            <p>Creating an all-new front end user interface from scratch using Figma for designing and React/JavaScript for implementation.</p>
+            <div class="h5">Software Engineering Intern</div>
+            <p>Designed 7 reusable learning module UI components in Figma; implemented UI components in React.</p>
 
-            <p>Leveraging graph theory to create a self-adaptable learning module changing question difficulty based on user track record.</p>
+            <p>Developed graph algorithms to enable dynamic learning modules; accumulated ~50 users for application testing.</p>
               
-            <p>Utilizing MongoDB to store “scenarios” and user profiles into the database and React to query the database when required.</p>
+            <p>Utilized MongoDB to store learning scenarios and user profiles; built an API and querying system in JavaScript to update
+              database according to user inputs, reflecting changes on the front end with React.</p>
+
+            <p>Spearheaded construction of an all-new likes and comments system, developing back-end, API, and front-end features used
+              across the website.</p>
           </div>
         </div>
       </div>
@@ -286,14 +306,15 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Full Stack Engineering Consultant</div>
-            <p>Implemented a redesign of the frontend using React and TypeScript; changes led to a $25,000 stipend from “Longhorn Startup.” </p>
+            <div class="h5">Software Engineering Co-op</div>
+            <p>Redesigned the IOS explore page with ReactNative and TypeScript; increased users from ~500 users to ~1,000 users in 2 months.</p>
 
-            <p>Created Python scripts leveraging the government’s product recall API and storing necessary data in a Firebase database.</p>
+            <p>Used Github Actions and Python scripts to automatically query US Consumer Product Safety Commission’s Product Recall API;
+              script parses ~5,000 product recalls monthly.</p>
               
-            <p>Automated Python scripts deleting old data and adding new data monthly, parsing the data and sorting it into the database.</p>
+            <p>Created a Python script that categorizes product recall data; saved company ~10 hours/month of manual sorting.</p>
 
-            <p>Front end and back end improvements increased user traction 100% (from ~500 users to ~1,000 users) in 2 months.</p>
+            <p>Worked with Co-Founders to secure an additional $25,000 in funding from the Longhorn Startup fund.</p>
           </div>
         </div>
       </div>
