--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a dual-degree in Computer Science and Economics!</p>
+            <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a dual-degree in Computer Science and Economics and I'm graduating in May of 2026!</p>
             <p>With a blended background in Programming and UI/UX design, I hope to delve into the field of Software Engineering.</p>
           </div>
         </div>
@@ -370,7 +370,7 @@
           <div class="card-body">
             <div class="h5">Bachelor's of Science: Computer Science</div>
             <p class="category">The University of Texas at Austin</p>
-            <p>Relevant Courses: C S 429 (Computer Organization & Architecture), SDS 321 (Probability & Statistics), M 340L (Linear Algebra), C S 314 (Data Structures), 
+            <p>Relevant Courses: C S 439 (Operating Systems), C S 429 (Computer Organization & Architecture), SDS 321 (Probability & Statistics), M 340L (Linear Algebra), C S 314 (Data Structures), 
               C S 311 (Discrete Math), M 408D (Multivariable Calculus).</p>
             <p>GPA: 4.00</p>
           </div>
