--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! My name is Krish Shah. I am a student at The University of Texas at Austin pursing a dual-degree in Computer Science and Economics and I'm graduating in May of 2026!</p>
-            <p>With a blended background in Programming and UI/UX design, I hope to delve into the field of Software Engineering.</p>
+            <p>I'm looking to delve into the intersection of Software and Systems Engineering!</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -110,25 +110,9 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">C</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">React.js + TypeScript</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
@@ -139,8 +123,24 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Figma UI/UX Design</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">React.js + JavaScript/TypeScript</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">UI/UX Design</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -177,37 +177,25 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/Wildfire.png" alt="Image"/>
+                    <a href="https://www.youtube.com/watch?app=desktop&v=VqS4u_o_nB0&ab_channel=RahulKodali" target="_blank">
+                      <figcaption>
+                        <div class="h4">Wildfire Detection Service</div>
+                        <p>Software Engineering, AI/ML</p>
+                      </figcaption>
+                    </a>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/Hebron Sites.png" alt="Image"/>
-                    <a href="https://chrome.google.com/webstore/detail/hebron-sites/nifkhcegnmgnibbjkghmlmdhjdcpoejl" target="_blank">
+                    <a href="https://github.com/krishshah765/Hebron-Sites" target="_blank">
                       <figcaption>
                         <div class="h4">Chrome Extension Project</div>
                         <p>Web Development</p>
                       </figcaption>
                     </a>
                   </figure></a></div>
-              <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Startup Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a></div>
-            </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Food Order Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Web Advertising Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a></div> -->
             </div>
           </div>
         </div>
@@ -253,6 +241,47 @@
     </div>
   </div>
 </div>
+<div class="section">
+  <div class="container cc-experience">
+    <div class="h4 text-center mb-4 title">Projects</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>September 2024 - December 2024</p>
+            <div class="h5">PINTOS</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Operating System Implementation</div>
+            <p>Implemented multithreading with synchronization; designed a multi-level feedback queue thread scheduling algorithm.</p>
+            <p>Extended virtual memory by managing supplemental page tables and enforced demand paging.</p>
+            <p>Enhanced the file system with implementing directory support and syscall handling; reduced I/O latency by ~50%.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>April 2024</p>
+            <div class="h5">System Emulator</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">CPU Pipeline Simulation Algorithm</div>
+            <p>Simulated all stages of an instruction pipeline using C; ensured accurate execution flow and performance modeling.</p>
+            <p>Implemented hazard detection/resolution (data forwarding and pipeline bubbling) to prevent stalls and maintain correctness.</p>
+            <p>Integrated caching to model memory hierarchy behavior, optimizing instruction and data access latency.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
@@ -260,14 +289,48 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>August 2024 - Present</p>
-            <div class="h5">Texas Convergent</div>
+            <p>Januart 2025 - Present</p>
+            <div class="h5">Alcan Dental Cooperative</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Technical Lead</div>
-            <p>Leading a team of ~6-8 software engineers in a Fall Semester Co-op with a startup based in Austin, Texas.</p>
+            <p>AI Chatbot Development</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>January 2025 - Present</p>
+            <div class="h5">SAGA Lab</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Software Engineering Research Assistant</div>
+            <p>EdTech Development</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>August 2024 - December 2024</p>
+            <div class="h5">Jump Finance</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Technical Lead</div>
+            <p>Led a team of 7 software engineers in weekly meetings and communicating project progress with the client.</p>
+            <p>Leveraged React, JavaScript, and SQL to create an interface providing ~300 West African college students with tuition plans.</p>
+            <p>Spearheaded construction of a course registration software connecting universities with students to streamline class scheduling; decreased administrative manual labor time by ~50% when registering for courses. </p>
           </div>
         </div>
       </div>
@@ -309,7 +372,7 @@
             <div class="h5">Software Engineering Co-op</div>
             <p>Redesigned the IOS explore page with ReactNative and TypeScript; increased users from ~500 users to ~1,000 users in 2 months.</p>
 
-            <p>Used Github Actions and Python scripts to automatically query US Consumer Product Safety Commission’s Product Recall API;
+            <p>Used Github Actions and Python scripts to automatically query US Consumer Product Safety Commission's Product Recall API;
               script parses ~5,000 product recalls monthly.</p>
               
             <p>Created a Python script that categorizes product recall data; saved company ~10 hours/month of manual sorting.</p>
@@ -332,7 +395,7 @@
             <div class="h5">UI/UX Designing Consultant</div>
             <p>Qwell is an organization centered around accessibility to resources, events, and community for LGTBTQ+ population in the greater Austin area.</p>
             <p>Created the UI/UX for the explore page for Greater (an app created for QWell).</p>
-            <p>Built an internal tool that allows admin/app managers to manage the app’s data and information while also letting business owners edit the details or information for their business to be reflected on the app.</p>
+            <p>Built an internal tool that allows admin/app managers to manage the app's data and information while also letting business owners edit the details or information for their business to be reflected on the app.</p>
           </div>
         </div>
       </div>
@@ -370,7 +433,7 @@
           <div class="card-body">
             <div class="h5">Bachelor's of Science: Computer Science</div>
             <p class="category">The University of Texas at Austin</p>
-            <p>Relevant Courses: C S 439 (Operating Systems), C S 429 (Computer Organization & Architecture), SDS 321 (Probability & Statistics), M 340L (Linear Algebra), C S 314 (Data Structures), 
+            <p>Relevant Courses: C S 378 (Energy Efficient Computing), C S 356 (Computer Networks), C S 360V (Virtualization), C S 439 (Operating Systems), C S 429 (Computer Organization & Architecture), SDS 321 (Probability & Statistics), M 340L (Linear Algebra), C S 314 (Data Structures), 
               C S 311 (Discrete Math), M 408D (Multivariable Calculus).</p>
             <p>GPA: 4.00</p>
           </div>
@@ -389,7 +452,7 @@
           <div class="card-body">
             <div class="h5">Bachelor's of Science: Economics</div>
             <p class="category">The University of Texas at Austin</p>
-            <p>Relevant Courses: ECO 329 (Economic Statistics), ECO 304K (Microeconomics), ECO 304L (Macroeconomics).</p>
+            <p>Relevant Courses: ECO 420K (Microeconomic Theory), ECO 329 (Economic Statistics), ECO 304K (Microeconomics), ECO 304L (Macroeconomics).</p>
             <p>GPA: 4.00</p>
           </div>
         </div>
@@ -431,7 +494,7 @@
                 <p class="category">Debate Mentor</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> I don’t work with the team anymore, and every day I miss seeing firsthand the success Krish is having. Despite a change in coaches, Krish hasn’t allowed the obstacles to reduce his commitment. I know he will continue to face every challenge with the same level of determination, drive, and commitment I’ve come to associate with him. </p>
+                <p> I don't work with the team anymore, and every day I miss seeing firsthand the success Krish is having. Despite a change in coaches, Krish hasn't allowed the obstacles to reduce his commitment. I know he will continue to face every challenge with the same level of determination, drive, and commitment I've come to associate with him. </p>
               </div>
             </div>
           </div>
